# repo_explainer_agent

./: GUIDE.md  README.md  pyproject.toml
docker/: Dockerfile  build  run
repo_explainer_agent/: __init__.py  repo_explainer_agent.py  tools.py
src/: __init__.py  graph.py
src/core/: __init__.py  models.py  parsers.py  state.py
src/nodes/: __init__.py  architecture_analyzer_node.py  documentation_parser_node.py  file_explainer_node.py  initial_high_level_summarizer_node.py  initialize_repository_node.py  response_generator_node.py  static_code_analyzer_node.py  user_query_parser_node.py
src/utils/: __init__.py  llm_utils.py
tests/: test_tools.py
tests/data/: sample_python_file.py
