[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_explainer_agent"
version = "0.1.0"
description = "A simple AI agent analyzing the contents of a (Git) repository. "
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name="Andrei Matveyeu", email="andrei@ideabulbs.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/andreimatveyeu/repo_explainer_agent"
"Bug Tracker" = "https://github.com/andreimatveyeu/repo_explainer_agent/issues"

[project.dependencies]
langgraph = "^0.4.5"
langchain = "^0.3.25"
langchain-community = "^0.3.24"
